<resources>
    <string name="app_name">By_Mobil_Project</string>
    <string name="profil">Profil</string>
    <string name="activity">Activity</string>
    <string name="my_whislist">My Whislist</string>
    <string name="notificaion">Notificaion</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="car_s_detail">Car\'s Detail</string>
    <string name="_250_000">$ 250.000</string>
    <string name="a_luxury_car_with_several_advantages_will_make_you_feel_comfortable_in_using_it_besides_that_this_car_is_also_equipped_with_autopilot_features_read_more">A luxury car with several advantages will make you feel comfortable in using it, besides that this car is also equipped with autopilot features... Read More</string>
    <string name="_240_km_h">240 km/h</string>
    <string name="_440_kw">440 kw</string>
    <string name="_3s_0_80_km_h">3s 0-80 km/h</string>
    <string name="welcome_kutman">Welcome Kutman!</string>
    <string name="let_s_find_your_cars">Let’s find your cars!</string>
    <string name="pick_up">Pick Up</string>
    <string name="truck">Truck</string>
    <string name="recommendation">Recomendation</string>
    <string name="dollars">$250.000</string>
    <string name="sedan">Sedan</string>
    <string name="series">Series</string>
    <string name="_750_000">$750.000</string>
    <string name="_550_000">$550.000</string>
    <string name="pickup">Pickup</string>
    <string name="sedan_car">Sedan car</string>
    <string name="best_cars">Best Cars</string>
    <string name="see_all">See All</string>
    <string name="lamborghini_aventador">Lamborghini Aventador</string>
    <string name="sport_car">Sport Car</string>
    <string name="buy">Buy</string>
    <string name="transit_series">Transit Series</string>
    <string name="login">Login</string>
    <string name="enter_your_account_to_continue">Enter your account to continue</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">Or login with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="google">google</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_account_here">Create account here</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="retype_password">Retype Password</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="on_boarding_1">On Boarding 1</string>
    <string name="on_boarding_2">On Boarding 2</string>
    <string name="skip">Skip</string>
    <string name="on_boarding_3">On Boarding 3</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry. ]]></string>
    <string name="next">Next</string>
    <string name="todo">TODO</string>
    <string name="get_strated">Get Strated</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="total">Total:</string>
    <string name="card">card</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="car_img">car_img</string>
    <string name="spesification">Spesification</string>
    <string name="scania_truck">Scania Truck</string>
    <string name="r_series">R Series</string>
    <string name="description">Description</string>
    <string name="a_luxury_car">A luxury car with several advantages will make you feel comfortable in using it, besides that this car is also equipped with autopilot features... Read More</string>
    <string name="_180_km_h">180 km/h</string>
    <string name="top_speed">Top speed</string>
    <string name="_500_kw">500 kw</string>
    <string name="engine_power">Engine Power</string>
    <string name="s_0_80_km_h">s 0 - 80 KM/h</string>
    <string name="acceleration">Acceleration</string>
    <string name="buy_now">Buy Now</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_details">Checkout Details</string>
    <string name="change">Change</string>
    <string name="bmw_5_series">BMW 5 Series</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_pal_payment">Pay Pal Payment</string>
    <string name="car">car</string>
    <string name="master_card_payment">Master Card Payment</string>
    <string name="bitcoin_payment">Bitcoin Payment</string>

</resources>