<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/create_account_here"
        android:textColor="@color/darker_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"/>

    <LinearLayout
        android:layout_width="315dp"
        android:layout_height="325dp"
        android:orientation="vertical"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/enter_your_name"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/enter_your_email"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/enter_your_password"
            android:textColor="#757575"
            android:textSize="12sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/retype_password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/retype_your_password"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            tools:ignore="Autofill,LabelFor" />


    </LinearLayout>

    <TextView
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/shape1"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/poppins"
        android:text="@string/already_have_account"
        android:textColor="@color/darker_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in"
        android:textColor="@color/purple"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>