<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Car_detail_2"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/carDetail_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:contentDescription="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_s_detail"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/save"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/save"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:src="@drawable/beep_beep_medium_vehicle"
        app:layout_constraintTop_toBottomOf="@id/carDetail_tb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/car_img"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/detail_back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/spesification"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/car_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmw_5_series"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/specific"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/car_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_car"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_mark"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_250_000"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/specific"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_type"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:text="@string/a_luxury_car_with_several_advantages_will_make_you_feel_comfortable_in_using_it_besides_that_this_car_is_also_equipped_with_autopilot_features_read_more"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"/>

        <LinearLayout
            android:id="@+id/speed"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:background="@drawable/speed_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_240_km_h"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_speed"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/power"
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:background="@drawable/cards_back"
            app:layout_constraintStart_toEndOf="@id/speed"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_440_kw"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engine_power"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="135dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:background="@drawable/cards_back"
            app:layout_constraintStart_toEndOf="@id/power"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3s_0_80_km_h"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceleration"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>

        <TextView
            android:layout_width="315dp"
            android:layout_height="55dp"
            android:background="@drawable/purpleshape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/buy_now"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>